# rules_ruby

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .rubocop.yml  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  bundle.BUILD.tpl  gem_builder.rb.tpl  renovate.json  ruby.bzl  test.cmd  test.sh  toolchain.BUILD.tpl
.bcr/: config.yml  metadata.template.json
.claude/: settings.json
.github/workflows/: ci.bazelrc  ci.yml  release.yml  release_prep.sh
docs/: BUILD  proto.md  rails.md  repository_rules.md  rules.md
examples/deep_gem/: .bazelrc  .ruby-version  MODULE.bazel  README.md
examples/deep_gem/hello_world/: Gemfile  README.md  hello_world.gemspec
examples/deep_gem/hello_world/lib/: BUILD.bazel  hello_world.rb
examples/deep_gem/hello_world/lib/hello_world/: BUILD.bazel  speaker.rb  version.rb
examples/deep_gem/hello_world/spec/: BUILD.bazel  hello_world_spec.rb  speaker_spec.rb
examples/gem/: .bazelrc  .rubocop.yml  .ruby-version  BUILD  Gemfile  MODULE.bazel  Rakefile  WORKSPACE  gem.gemspec  ruby_version.bzl  test_coverage.sh  wrapper.tpl.sh
examples/gem/.aspect/bazelrc/: convenience.bazelrc  correctness.bazelrc  debug.bazelrc  performance.bazelrc
examples/gem/lib/: BUILD  gem.rb
examples/gem/lib/gem/: BUILD  add.rb  subtract.rb  version.rb
examples/gem/spec/: BUILD  add_spec.rb  env_spec.rb  runfiles_spec.rb  spec_helper.rb  subtract_spec.rb  support_spec.rb
examples/gem/spec/support/: BUILD
examples/git_gem/: BUILD  Gemfile  MODULE.bazel  greeter.rb  greeter_test.rb  hello_world_bin_test.rb
examples/git_gem/spec/: BUILD  greeter_spec.rb  hello_world_bin_spec.rb
examples/jekyll/: .gitignore  BUILD  Gemfile  MODULE.bazel  _config.yml  bazel-jekyll
examples/jekyll/_posts/: 2024-02-03-welcome-to-jekyll.markdown
examples/native_ext/: .bazelrc  .gitignore  .ruby-version  BUILD  Gemfile  MODULE.bazel  Rakefile  native_ext.gemspec
examples/native_ext/ext/c/: native_ext.h
examples/native_ext/ext/java/: Dummy.java
examples/native_ext/ext/native_ext/: extconf.rb  native_ext.c
examples/native_ext/lib/: native_ext.rb
examples/native_ext/lib/native_ext/: version.rb
examples/proto/: .bazelrc  Gemfile  MODULE.bazel
examples/proto/app/: BUILD  hello.rb  hello_test.rb
examples/proto/proto/: BUILD  foo.proto
examples/proto/proto/subdir/: bar.proto
examples/proto/tools/: BUILD
examples/proto/tools/toolchains/: BUILD
examples/rails/: .bazelrc  .envrc  .standard.yml  BUILD.bazel  Gemfile  MODULE.bazel  README.md
examples/rails/people_tracker/: .envrc  .rubocop.yml  BUILD.bazel  Dockerfile  Gemfile  README.md
examples/rails/people_tracker/.github/workflows/: ci.yml
examples/rails/people_tracker/app/: BUILD.bazel
examples/rails/people_tracker/app/assets/: BUILD.bazel
examples/rails/people_tracker/app/assets/builds/: tailwind.css
examples/rails/people_tracker/app/controllers/: BUILD.bazel  people_controller.rb
examples/rails/people_tracker/app/helpers/: BUILD.bazel
examples/rails/people_tracker/app/javascript/: BUILD.bazel
examples/rails/people_tracker/app/javascript/controllers/: index.js
examples/rails/people_tracker/app/jobs/: BUILD.bazel
examples/rails/people_tracker/app/mailers/: BUILD.bazel
examples/rails/people_tracker/app/models/: BUILD.bazel  person.rb
examples/rails/people_tracker/app/views/: BUILD.bazel
examples/rails/people_tracker/app/views/layouts/: BUILD.bazel  application.html.erb
examples/rails/people_tracker/app/views/people/: _form.html.erb  _person.html.erb  _person.json.jbuilder  edit.html.erb  index.html.erb  index.json.jbuilder  new.html.erb  show.html.erb  show.json.jbuilder
examples/rails/people_tracker/app/views/pwa/: BUILD.bazel  manifest.json.erb
examples/rails/people_tracker/config/: BUILD.bazel  application.rb  boot.rb  cable.yml  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  master.key  routes.rb
examples/rails/people_tracker/config/environments/: BUILD.bazel  test.rb
examples/rails/people_tracker/config/initializers/: BUILD.bazel  bazel_ruby_patches.rb
examples/rails/people_tracker/config/locales/: BUILD.bazel
examples/rails/people_tracker/db/: BUILD.bazel  schema.rb
examples/rails/people_tracker/db/migrate/: 20250821215024_create_people.rb  BUILD.bazel
examples/rails/people_tracker/test/: BUILD.bazel  rails.bzl  rails_test.bzl  test_helper.rb
examples/rails/people_tracker/test/controllers/: BUILD.bazel  people_controller_test.rb
examples/rails/people_tracker/test/fixtures/: BUILD.bazel  people.yml
examples/rails/people_tracker/test/models/: BUILD.bazel  person_test.rb
examples/rails/people_tracker/test/system/: BUILD.bazel  people_test.rb
rails/: BUILD.bazel  rails_test_factory.bzl
rails/private/: BUILD.bazel  rails_test_factory.bzl
ruby/: BUILD  defs.bzl  deps.bzl  extensions.bzl  proto.bzl  toolchain.bzl
ruby/private/: BUILD  binary.bzl  bundle.bzl  bundle_fetch.bzl  bundle_install.bzl  bundler_checksums.bzl  compile.bzl  coverage.rb  download.bzl  gem.bzl  gem_build.bzl  gem_install.bzl  gem_push.bzl  library.bzl  portable_ruby_checksums.bzl  prebuilt_ruby_checksums.bzl  proto.bzl  providers.bzl  test.bzl  (+3 more)
tools/generate_excluded_gems/: BUILD.bazel  generate_excluded_gems.sh  generate_excluded_gems_integration_test.sh  generate_excluded_gems_test.sh
tools/generate_excluded_gems/testdata/: default_gems.json  expected_excluded_gems_output.txt
tools/generate_portable_ruby_checksums/: BUILD.bazel  generate_portable_ruby_checksums.sh  generate_portable_ruby_checksums_integration_test.sh  generate_portable_ruby_checksums_test.sh
tools/generate_portable_ruby_checksums/testdata/: 3.4.8  3.4.8-1  expected_checksums_output.txt  jdx_ruby_release_response.json  jdx_ruby_releases_list.json  portable_ruby_release_response.json  portable_ruby_releases_list.json
tools/generate_rv_checksums/: BUILD.bazel  generate_rv_checksums.sh  generate_rv_checksums_integration_test.sh  generate_rv_checksums_test.sh
tools/generate_rv_checksums/testdata/: 3.4.8  expected_checksums_output.txt  rv_ruby_release_response.json
(+45 files in other folders)
