"Define the Bazel module published to the Bazel Central Registry"

module(
    name = "rules_ruby",
    compatibility_level = 1,
    # NB: this version will be replaced after a release by the Publish to BCR app
    version = "0.0.0",
)

# Lower-bound dependency versions.
# These should NOT be increased unless needed, as bumping our lower-bound may change
# the versions resolved in users repositories.
bazel_dep(name = "platforms", version = "0.0.5")

# TODO: should we register any toolchain by default?
