load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["rails_test_factory.bzl"])

bzl_library(
    name = "rails_test_factory",
    srcs = ["rails_test_factory.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//rails/private:rails_test_factory",
    ],
)

starlark_doc_extract(
    name = "rails_test_factory.doc_extract",
    src = "rails_test_factory.bzl",
    deps = [":rails_test_factory"],
)
