"Bazel dependencies"

bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "rules_ruby", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby")
ruby.bundle_fetch(
    name = "bundle",
    srcs = [
        "//:gem.gemspec",
        "//:lib/gem/version.rb",
    ],
    env = {
        "BUNDLE_BUILD__FOO": "bar",
    },
    gem_checksums = {
        "ast-2.4.2": "1e280232e6a33754cde542bc5ef85520b74db2aac73ec14acef453784447cc12",
        "concurrent-ruby-1.2.2": "3879119b8b75e3b62616acc256c64a134d0b0a7a9a3fcba5a233025bcde22c4f",
        "debug-1.6.3": "335f109abe39c1e3465df2d2f17f5108e2934070442e73c0a14d09de54012341",
        "diff-lcs-1.5.0": "49b934001c8c6aedb37ba19daec5c634da27b318a7a3c654ae979d6ba1929b67",
        "i18n-1.14.1": "9d03698903547c060928e70a9bc8b6b87fda674453cda918fc7ab80235ae4a61",
        "io-console-0.5.11": "7e2418376fd185ad66e7aee2c58c207e9be0f2197aa89bc4c89931995cee3365",
        "io-console-0.5.11-java": "58715c806ca57c42b2290cb4be1fb70f2a53d580f6f9fe460b9af88eed840db8",
        "irb-1.5.0": "ed8e15ab97034a7de1c5fc26343f0e83c43d85c759d97245f19b6bd7bc62baf6",
        "jar-dependencies-0.4.1": "b2df2f1ecbff15334ce20ea7fdd5b8d8161faab67761ff72c7647d728e40d387",
        "json-2.7.2": "1898b5cbc81cd36c0fd4d0b7ad2682c39fb07c5ff682fc6265f678f550d4982c",
        "json-2.7.2-java": "138e3038b5361b3d06ee2e8aa2be00bed0d0de4ef5f1553fc5935e5b93aca7ee",
        "language_server-protocol-3.17.0.3": "3d5c58c02f44a20d972957a9febe386d7e7468ab3900ce6bd2b563dd910c6b3f",
        "parallel-1.24.0": "5bf38efb9b37865f8e93d7a762727f8c5fc5deb19949f4040c76481d5eee9397",
        "parser-3.3.2.0": "085d6ff5de3db7fa8ce1298abdb08750ccd7c96d0fcb95a90437b6d851378249",
        "psych-5.1.2": "337322f58fc2bf24827d2b9bd5ab595f6a72971867d151bb39980060ea40a368",
        "psych-5.1.2-java": "1dd68dc609eddbc884e6892e11da942e16f7256bd30ebde9d35449d43043a6fe",
        "racc-1.8.0": "09349a65c37c4fe710a435f25c9f1652e39f29ad6b1fa08d4a8d30c0553d3a08",
        "racc-1.8.0-java": "3688448632150682bbd708b199961129aed2266107e26fcacb45c997395c19f9",
        "rainbow-3.1.1": "039491aa3a89f42efa1d6dec2fc4e62ede96eb6acd95e52f1ad581182b79bc6a",
        "rake-13.1.0": "be6a3e1aa7f66e6c65fa57555234eb75ce4cf4ada077658449207205474199c6",
        "regexp_parser-2.9.2": "5a27e767ad634f8a4b544520d5cd28a0db7aa1198a5d7c9d7e11d7b3d9066446",
        "reline-0.3.1": "b101d93607bf7564657f082f68abfa19ae939d14a709eff89be048eae2d7f4c7",
        "rexml-3.2.8": "0908a86381d9f973824680df4e0a75422766272f03b1c0e49db7e79c23db1135",
        "rspec-3.11.0": "8907f32e5c3095724e54c143e9cfc4df37079be349343dab9029becdb259bea5",
        "rspec-core-3.11.0": "46317850396fea47e6793dd5a7606c0816aa38f5149f4cd5de308495b89b1085",
        "rspec-expectations-3.11.1": "6c0dbc560a4aea8e058e3dc2633657725d9001d17ba01eb1582122a3ccfc2b50",
        "rspec-mocks-3.11.1": "5537dc069afabcea5cbc199a1432a2772ba3a465f3233f40d04695daba7c6a1f",
        "rspec-support-3.11.1": "f85f276a37e096b7bf6f308a96c59ba0a5398907f04942cede66cabc598c01b0",
        "rubocop-1.64.1": "3145bf1863771e400a1c041060e751e5ff0edd9ceb99d01df36db1902f611f3b",
        "rubocop-ast-1.31.3": "1b07d618d8776993ec6053a706d1c09f0bf15139fd69415924656cbff07e7818",
        "ruby-progressbar-1.13.0": "80fc9c47a9b640d6834e0dc7b3c94c9df37f08cb072b7761e4a71e22cff29b33",
        "stringio-3.1.0": "c1f6263ae03a15025e51194ab19b06b15e06adcaaedb7f5f6c06ab60f5d67718",
        "strscan-3.1.0": "01b8a81d214fbf7b5308c6fb51b5972bbfc4a6aa1f166fd3618ba97e0fcd5555",
        "strscan-3.1.0-java": "8645aa76e017e21764c6df572d2d79fcc1672284014f5bdbd806278cdbcd11b0",
        "unicode-display_width-2.5.0": "7e7681dcade1add70cb9fda20dd77f300b8587c81ebbd165d14fd93144ff0ab4",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")
