"Bazel dependencies"

bazel_dep(name = "bazel_skylib", version = "1.5.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4", dev_dependency = True)
bazel_dep(name = "rules_ruby", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.4.0", dev_dependency = True)

local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    portable_ruby = True,
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby")

ruby.bundle_fetch(
    name = "bundle",
    srcs = [
        "//:gem.gemspec",
        "//:lib/gem/version.rb",
    ],
    env = {
        "BUNDLE_BUILD__FOO": "bar",
    },
    gem_checksums = {
        "addressable-2.8.9": "cc154fcbe689711808a43601dee7b980238ce54368d23e127421753e46895485",
        "ast-2.4.3": "954615157c1d6a382bc27d690d973195e79db7f55e9765ac7c481c60bdb4d383",
        "bigdecimal-4.0.1": "8b07d3d065a9f921c80ceaea7c9d4ae596697295b584c296fe599dd0ad01c4a7",
        "bigdecimal-4.0.1-java": "95c40a0a92dfb83b293f4b9865cd27caa7c045bedab86f3620e5dc27e6553083",
        "concurrent-ruby-1.3.6": "6b56837e1e7e5292f9864f34b69c5a2cbc75c0cf5338f1ce9903d10fa762d5ab",
        "date-3.5.1": "750d06384d7b9c15d562c76291407d89e368dda4d4fff957eb94962d325a0dc0",
        "date-3.5.1-java": "12e09477dc932afe45bf768cd362bf73026804e0db1e6c314186d6cd0bee3344",
        "debug-1.11.1": "2e0b0ac6119f2207a6f8ac7d4a73ca8eb4e440f64da0a3136c30343146e952b6",
        "diff-lcs-1.6.2": "9ae0d2cba7d4df3075fe8cd8602a8604993efc0dfa934cff568969efb1909962",
        "docile-1.4.1": "96159be799bfa73cdb721b840e9802126e4e03dfc26863db73647204c727f21e",
        "docker-api-2.4.0": "824be734f4cc8718189be9c8e795b6414acbbf7e8b082a06f959a27dd8dd63e6",
        "erb-6.0.2": "9fe6264d44f79422c87490a1558479bd0e7dad4dd0e317656e67ea3077b5242b",
        "erb-6.0.2-java": "38f0e2e15453963fda1754d6b555b26650631cad72567304d59e6c3d847cd1be",
        "excon-1.3.2": "a089babe98638e58042a7d542b2bbd183304527e33d612b6dde22fa491a544a5",
        "i18n-1.14.8": "285778639134865c5e0f6269e0b818256017e8cde89993fdfcbfb64d088824a5",
        "io-console-0.8.2": "d6e3ae7a7cc7574f4b8893b4fca2162e57a825b223a177b7afa236c5ef9814cc",
        "io-console-0.8.2-java": "837efefe96084c13ae91114917986ae6c6d1cf063b27b8419cc564a722a38af8",
        "irb-1.17.0": "168c4ddb93d8a361a045c41d92b2952c7a118fa73f23fe14e55609eb7a863aae",
        "jar-dependencies-0.5.5": "2972b9fcba4b014e6446a84b5c09674a3e8648b95b71768e729f0e8e40568059",
        "json-2.18.1": "fe112755501b8d0466b5ada6cf50c8c3f41e897fa128ac5d263ec09eedc9f986",
        "json-2.18.1-java": "06f20d8b4e261f2659d310873bfa09c3bb16550e8990efe27f6f79727eb6fa31",
        "json-schema-6.1.0": "6bf70a2cfb6dfd5a06da28093fa8190f324c88eabd36a7f47097f227321dc702",
        "language_server-protocol-3.17.0.5": "fd1e39a51a28bf3eec959379985a72e296e9f9acfce46f6a79d31ca8760803cc",
        "lint_roller-1.1.0": "2c0c845b632a7d172cb849cc90c1bce937a28c5c8ccccb50dfd46a485003cc87",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "mcp-0.7.1": "fa967895d6952bad0d981ea907731d8528d2c246d2079d56a9c8bae83d14f1c7",
        "multi_json-1.19.1": "7aefeff8f2c854bf739931a238e4aea64592845e0c0395c8a7d2eea7fdd631b7",
        "parallel-1.27.0": "4ac151e1806b755fb4e2dc2332cbf0e54f2e24ba821ff2d3dcf86bf6dc4ae130",
        "parser-3.3.10.2": "6f60c84aa4bdcedb6d1a2434b738fe8a8136807b6adc8f7f53b97da9bc4e9357",
        "pp-0.6.3": "2951d514450b93ccfeb1df7d021cae0da16e0a7f95ee1e2273719669d0ab9df6",
        "prettyprint-0.2.0": "2bc9e15581a94742064a3cc8b0fb9d45aae3d03a1baa6ef80922627a0766f193",
        "prism-1.9.0": "7b530c6a9f92c24300014919c9dcbc055bf4cdf51ec30aed099b06cd6674ef85",
        "psych-5.3.1": "eb7a57cef10c9d70173ff74e739d843ac3b2c019a003de48447b2963d81b1974",
        "psych-5.3.1-java": "20a4a81ad01479ef060f604ed75ba42fe673169e67d923b1bae5aa4e13cc5820",
        "public_suffix-7.0.2": "9114090c8e4e7135c1fd0e7acfea33afaab38101884320c65aaa0ffb8e26a857",
        "racc-1.8.1": "4a7f6929691dbec8b5209a0b373bc2614882b55fc5d2e447a21aaa691303d62f",
        "racc-1.8.1-java": "54f2e6d1e1b91c154013277d986f52a90e5ececbe91465d29172e49342732b98",
        "rainbow-3.1.1": "039491aa3a89f42efa1d6dec2fc4e62ede96eb6acd95e52f1ad581182b79bc6a",
        "rake-13.3.1": "8c9e89d09f66a26a01264e7e3480ec0607f0c497a861ef16063604b1b08eb19c",
        "rdoc-7.2.0": "8650f76cd4009c3b54955eb5d7e3a075c60a57276766ebf36f9085e8c9f23192",
        "regexp_parser-2.11.3": "ca13f381a173b7a93450e53459075c9b76a10433caadcb2f1180f2c741fc55a4",
        "reline-0.6.3": "1198b04973565b36ec0f11542ab3f5cfeeec34823f4e54cebde90968092b1835",
        "rspec-3.13.2": "206284a08ad798e61f86d7ca3e376718d52c0bc944626b2349266f239f820587",
        "rspec-core-3.13.6": "a8823c6411667b60a8bca135364351dda34cd55e44ff94c4be4633b37d828b2d",
        "rspec-expectations-3.13.5": "33a4d3a1d95060aea4c94e9f237030a8f9eae5615e9bd85718fe3a09e4b58836",
        "rspec-mocks-3.13.8": "086ad3d3d17533f4237643de0b5c42f04b66348c28bf6b9c2d3f4a3b01af1d47",
        "rspec-support-3.13.7": "0640e5570872aafefd79867901deeeeb40b0c9875a36b983d85f54fb7381c47c",
        "rubocop-1.85.0": "317407feb681a07d54f64d2f9e1d6b6af1ce7678e51cd658e3ad8bd66da48c01",
        "rubocop-ast-1.49.0": "49c3676d3123a0923d333e20c6c2dbaaae2d2287b475273fddee0c61da9f71fd",
        "ruby-progressbar-1.13.0": "80fc9c47a9b640d6834e0dc7b3c94c9df37f08cb072b7761e4a71e22cff29b33",
        "simplecov-0.22.0": "fe2622c7834ff23b98066bb0a854284b2729a569ac659f82621fc22ef36213a5",
        "simplecov-html-0.13.2": "bd0b8e54e7c2d7685927e8d6286466359b6f16b18cb0df47b508e8d73c777246",
        "simplecov-lcov-0.9.0": "7a77a31e200a595ed4b0249493056efd0c920601f53d2ef135ca34ee796346cd",
        "simplecov_json_formatter-0.1.4": "529418fbe8de1713ac2b2d612aa3daa56d316975d307244399fa4838c601b428",
        "stringio-3.2.0": "c37cb2e58b4ffbd33fe5cd948c05934af997b36e0b6ca6fdf43afa234cf222e1",
        "testcontainers-0.2.0": "b8fb466cfbba02eef9120fa0f4e1ebce6c7220b65c5b025ce003d8c6a6b68c67",
        "testcontainers-core-0.2.0": "94f316f08f388a8afb75a4fec6ff9ed4289cf60ca7a77522d4ca26688f4c4da4",
        "tsort-0.2.0": "9650a793f6859a43b6641671278f79cfead60ac714148aabe4e3f0060480089f",
        "unicode-display_width-3.2.0": "0cdd96b5681a5949cdbc2c55e7b420facae74c4aaf9a9815eee1087cb1853c42",
        "unicode-emoji-4.2.0": "519e69150f75652e40bf736106cfbc8f0f73aa3fb6a65afe62fefa7f80b0f80f",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
    jar_checksums = {
        "org.snakeyaml:snakeyaml-engine:2.10": "c99d9fd66c7c251d881a9cd95089b7c8044c29a1b02983d7036981bd4354ec37",
    },
)
use_repo(ruby, "bundle", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")
