"Bazel dependencies"

bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4", dev_dependency = True)
bazel_dep(name = "rules_ruby", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "3.2.6",
)
use_repo(ruby, "ruby")
ruby.bundle_fetch(
    name = "bundle",
    gem_checksums = {
        "addressable-2.8.6": "798f6af3556641a7619bad1dce04cdb6eb44b0216a991b0396ea7339276f2b47",
        "colorator-1.1.0": "e2f85daf57af47d740db2a32191d1bdfb0f6503a0dfbc8327d0c9154d5ddfc38",
        "concurrent-ruby-1.2.3": "82fdd3f8a0816e28d513e637bb2b90a45d7b982bdf4f3a0511722d2e495801e2",
        "em-websocket-0.5.3": "f56a92bde4e6cb879256d58ee31f124181f68f8887bd14d53d5d9a292758c6a8",
        "eventmachine-1.2.7": "994016e42aa041477ba9cff45cbe50de2047f25dd418eba003e84f0d16560972",
        "ffi-1.16.3": "6d3242ff10c87271b0675c58d68d3f10148fabc2ad6da52a18123f06078871fb",
        "forwardable-extended-2.6.0": "1bec948c469bbddfadeb3bd90eb8c85f6e627a412a3e852acfd7eaedbac3ec97",
        "http_parser.rb-0.8.0": "5a0932f1fa82ce08a8516a2685d5a86031c000560f89946913c555a0697544be",
        "i18n-1.14.1": "9d03698903547c060928e70a9bc8b6b87fda674453cda918fc7ab80235ae4a61",
        "jekyll-3.9.4": "5d5e0b931c203ce129a16b2d2d5094a905a088749d24452fa8d82e1078315eff",
        "jekyll-feed-0.17.0": "689aab16c877949bb9e7a5c436de6278318a51ecb974792232fd94d8b3acfcc3",
        "jekyll-sass-converter-1.5.2": "53773669e414dc3bb070113befacb808576025a28cfa4a4accc682e90a9c1101",
        "jekyll-seo-tag-2.8.0": "3f2ed1916d56f14ebfa38e24acde9b7c946df70cb183af2cb5f0598f21ae6818",
        "jekyll-watch-2.2.1": "bc44ed43f5e0a552836245a54dbff3ea7421ecc2856707e8a1ee203a8387a7e1",
        "kramdown-2.4.0": "b62e5bcbd6ea20c7a6730ebbb2a107237856e14f29cebf5b10c876cc1a2481c5",
        "kramdown-parser-gfm-1.1.0": "fb39745516427d2988543bf01fc4cf0ab1149476382393e0e9c48592f6581729",
        "liquid-4.0.4": "4fcfebb1a045e47918388dbb7a0925e7c3893e58d2bd6c3b3c73ec17a2d8fdb3",
        "listen-3.8.0": "9679040ac6e7845ad9f19cf59ecde60861c78e2fae57a5c20fe35e94959b2f8f",
        "mercenary-0.3.6": "2a084b18f5692c86a633e185d5311ba6d11fc46c802eb414ae05368178078a82",
        "minima-2.5.1": "520e52bc631fb16cbb8100660f6caa44f97859e2fa7e397d508deb18739567be",
        "pathutil-0.16.2": "e43b74365631cab4f6d5e4228f812927efc9cb2c71e62976edcb252ee948d589",
        "public_suffix-5.0.4": "35cd648e0d21d06b8dce9331d19619538d1d898ba6d56a6f2258409d2526d1ae",
        "rb-fsevent-0.11.2": "43900b972e7301d6570f64b850a5aa67833ee7d87b458ee92805d56b7318aefe",
        "rb-inotify-0.10.1": "050062d4f31d307cca52c3f6a7f4b946df8de25fc4bd373e1a5142e41034a7ca",
        "rexml-3.2.6": "e0669a2d4e9f109951cb1fde723d8acd285425d81594a2ea929304af50282816",
        "rouge-3.30.0": "a3d353222aa72e49e2c86726c0bcfd719f82592f57d494474655f48e669eceb6",
        "safe_yaml-1.0.5": "a6ac2d64b7eb027bdeeca1851fe7e7af0d668e133e8a88066a0c6f7087d9f848",
        "sass-3.7.4": "808b0d39053aa69068df939e24671fe84fd5a9d3314486e1a1457d0934a4255d",
        "sass-listen-4.0.0": "ae9dcb76dd3e234329e5ba6e213f48e532c5a3e7b0b4d8a87f13aaca0cc18377",
        "wdm-0.1.1": "28406f5f236796019bea5b2a85e37cbcd229ec928c8b68261947a44eec15b474",
        "webrick-1.8.1": "19411ec6912911fd3df13559110127ea2badd0c035f7762873f58afc803e158f",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")
