"Bazel dependencies"

bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.17", dev_dependency = True)
bazel_dep(name = "rules_java", version = "9.6.0", dev_dependency = True)
bazel_dep(name = "rules_ruby", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    portable_ruby = True,
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")
