bazel_dep(name = "rules_ruby")
bazel_dep(name = "protobuf", version = "3.19.6")
bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.22.5",
    # repo_name = None (we don't dep on this but need a newer version)
)

local_path_override(
    module_name = "rules_ruby",
    path = "../..",
)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

ruby.bundle_fetch(
    name = "bundle",
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle")

register_toolchains("//tools/toolchains:all")
